--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,15 @@ dependencies:
   intl: ^0.17.0
   tensorflow_lite_flutter: ^2.0.1
   image: ^4.2.0
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
+  cloud_firestore: ^5.4.0
+  firebase_storage: ^12.2.0
+  shared_preferences: ^2.3.2
+  shimmer: ^3.0.0
+  cached_network_image: ^3.4.1
+  animations: ^2.0.7
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
